# LocLM

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
resources/: .gitkeep
resources/windows-x86_64/: .gitkeep  VERSION.txt
scripts/: fetch-llama.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  hardware.rs  inference.rs  lib.rs  main.rs  settings.rs
src-tauri/src/models/: catalog.rs  download.rs  mod.rs
src/components/: ChatPanel.tsx  ConversationList.tsx  HardwareGauge.tsx  ModelLibrary.tsx  SettingsPanel.tsx  StatusStrip.tsx
src/lib/: api.ts  chatStream.ts  recommend.ts
src/types/: chat.ts  hardware.ts  models.ts  server.ts  settings.ts
