[package]
name = "loclm"
version = "0.1.0"
description = "LocLM — run local LLMs with zero setup friction"
authors = ["LocLM"]
edition = "2021"

[lib]
name = "loclm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35"
ureq = "2"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
